[package]
name = "ttrpc-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ttrpc = { git = "https://github.com/nubificus/ttrpc-rust.git", branch = "vaccel-dev", features = ["async"] }
protobuf = "3.1"
async-trait = "0.1"

[build-dependencies]
ttrpc-codegen = { git = "https://github.com/nubificus/ttrpc-rust.git", branch = "vaccel-dev" }
